--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
+<h3>Проверка update</a></h3>
 </body>
 </html>
