--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
-<h3>Проверка update</a></h3>
+<hr>
+<ul style="font-size: large">
+    <li><a href="users">Users</a></li>
+</ul>
 </body>
 </html>
